--- a/templates/admin/dashboard/dashboard.html
+++ b/templates/admin/dashboard/dashboard.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>SaskDance</title>
-</head>
-<body>
-Dashboard!
-</body>
-</html>
+{% extends 'base_layout.html' %}
+
+{% block content %}
+<h3>Content</h3>
+<div>
+    <ul>
+        <li><a href="#dances">Dances</a></li>
+        <li><a href="#lessons">Lessons</a></li>
+        <li><a href="#events">Events</a></li>
+        <li><a href="#workshops">Workshops</a></li>
+        <li><a href="#news">News</a></li>
+    </ul>
+</div>
+{% endblock %}
