--- a/templates/admin/dashboard/dashboard.html
+++ b/templates/admin/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 <h3>Content</h3>
 <div>
     <ul>
-        <li><a href="#dances">Dances</a></li>
+        <li><a href="/dashboard/dances">Dances</a></li>
         <li><a href="#lessons">Lessons</a></li>
         <li><a href="#events">Events</a></li>
         <li><a href="#workshops">Workshops</a></li>
