--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -4,6 +4,9 @@
     <title>{% block title %}SaskDance{% endblock %}</title>
     {% include 'style-includes/header.html' %}
     <link rel="stylesheet" href="/static/css/theme.css">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 </head>
 <body>
     <div class="navbar navbar-default" role="navigation">
@@ -12,7 +15,7 @@
             <div class="logout "><a href="#logout">Sign Out</a></div>
         {% else %}
         <div class="navbar-container">
-            <div class="navbar-header"><a href="#dances">Dances</a></div>
+            <div class="navbar-header"><a href="/dances">Dances</a></div>
             <div class="navbar-header"><a href="#events">Events</a></div>
             <div class="navbar-header"><a href="#lessons">Lessons</a></div>
             <div class="navbar-header"><a href="#workshops">Workshops</a></div>
@@ -26,6 +29,7 @@
             {% block content %}{% endblock %}
         </div>
     </div>
+    <br />
 </body>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
