Can now edit dances

--- a/templates/admin/dashboard/dances/dances_overview.html
+++ b/templates/admin/dashboard/dances/dances_overview.html
@@ -90,7 +90,7 @@
                             <div class="col-lg-2">
                                 <br />
                                 <!-- add in edit option -->
-                                <a href="#" class="btn btn-info">Edit Dance</a>
+                                <a href="/dashboard/dances/edit?id={{ dance.id }}" class="btn btn-info">Edit Dance</a>
                             </div>
                         </div>
                         {% endfor %}
