--- a/templates/admin/dashboard/dashboard.html
+++ b/templates/admin/dashboard/dashboard.html
@@ -6,7 +6,7 @@
     <ul>
         <li><a href="/dashboard/dances">Dances</a></li>
         <li><a href="#lessons">Lessons</a></li>
-        <li><a href="#events">Events</a></li>
+        <li><a href="/dashboard/events">Events</a></li>
         <li><a href="#workshops">Workshops</a></li>
         <li><a href="#news">News</a></li>
     </ul>
