--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>SaskDance</title>
     {% include 'style-includes/header.html' %}
-    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" href="/static/css/app/login.css">
 </head>
 <body>
     <h2>SaskDance Dashboard</h2>
