--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -3,7 +3,7 @@
 <head>
     <title>{% block title %}SaskDance{% endblock %}</title>
     {% include 'style-includes/header.html' %}
-    <link rel="stylesheet" href="/static/css/theme.css">
+    <link rel="stylesheet" href="/static/css/app/theme.css">
     <script src="/static/js/jquery2.1.3.min.js"></script>
     <script src="/static/js/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="/static/css/jquery-ui.min.css"/>
