--- a/templates/admin/dashboard/dances/add_dance.html
+++ b/templates/admin/dashboard/dances/add_dance.html
@@ -1,4 +1,4 @@
-{% extends 'base_layout.html' %}
+{% extends 'admin/dashboard/datetime_base.html' %}
 
 {% block content %}
     <h2>New Dance</h2>
@@ -18,21 +18,22 @@
         <div class="row">
             <div class="col-sm-2">
                 <label class="control-label">Date</label>
-                <input name="start_date" type="text" class="form-control" placeholder="YYYY/MM/DD"/>
+                <input id="dance-date" name="start_date" type="text" class="form-control" required=""/>
+            </div>
+
+            <div class="col-sm-2">
+                <label class="control-label">Start Time</label>
+                <input name="start_time" type="text" class="form-control timepicker" required=""/>
             </div>
             <div class="col-sm-2">
-                <label class="control-label">Start Time (24 hour)</label>
-                <input name="start_time" type="text" class="form-control" placeholder="ex: 14:30"/>
-            </div>
-            <div class="col-sm-2">
-                <label class="control-label">End Time (24 hour)</label>
-                <input name="end_time" type="text" class="form-control" placeholder="ex: 15:00"/>
+                <label class="control-label">End Time</label>
+                <input name="end_time" type="text" class="form-control timepicker"/>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6">
                 <label class="control-label">Location</label>
-                <input name="location" type="text" class="form-control"/>
+                <input name="location" type="text" class="form-control" required=""/>
             </div>
         </div>
         <div class="row">
@@ -66,4 +67,15 @@
         <br />
         <br />
     </form>
+{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript">
+
+  $( document ).ready(function() {
+    $('#dance-date').datepicker();
+    $('.timepicker').timepicker();
+  });
+
+</script>
 {% endblock %}
