--- a/templates/admin/dashboard/events/events_overview.html
+++ b/templates/admin/dashboard/events/events_overview.html
@@ -55,7 +55,7 @@
                         <p><b>When</b></p>
                     </div>
                     <div class="col-lg-3">
-                        <p>{{ event.event_time }}</p>
+                        <p>{{ event.event_datetime }}</p>
                     </div>
                 </div>
                 <div class="row">
